[package]
name = "kvlite"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
thiserror = "1.0.24"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
tokio = { version = "1.3.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2.0"
env_logger = "0.8.3"

