[package]
name = "kvlite"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
thiserror = "1.0.24"
log = "0.4.14"
memmap = "0.7.0"
rand = "0.8.3"
rayon = "1.5"

[dev-dependencies]
tempfile = "3.2.0"
env_logger = "0.8.3"
layout = {path = "./benches/layout"}

[features]
default = []
mmap = []

[[bench]]
name = "range_query"
path = "benches/layout_bench/range_query.rs"

[[bench]]
name = "point_query"
path = "benches/layout_bench/point_query.rs"

