[package]
name = "kvlite"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.3.0"
crossbeam-channel = "0.5.1"
chrono = "0.4.19"
fs_extra = "1.2.0"
thiserror = "1.0.24"
log = "0.4.14"
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.2"
memmap = "0.7.0"
rand = "0.8.3"
rayon = "1.5.1"
snap = "1.0.5"
tempfile = "3.2.0"
procfs = "0.9.1"
filters-rs = { git = "https://github.com/ChiangYintso/filters-rs.git" }

[dev-dependencies]
env_logger = "0.8.3"
layout = { path = "./benches/layout" }

[features]
default = []
use_jemalloc = []
snappy_compression = []
mmap = []

[[bin]]
name = "db_bench"
path = "bin/db_bench.rs"

[[bench]]
name = "range_query"
path = "benches/layout_bench/range_query.rs"

[[bench]]
name = "point_query"
path = "benches/layout_bench/point_query.rs"
