[package]
name = "observability"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minitrace = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-jaeger = { git = "https://github.com/tikv/minitrace-rust.git" }
kvlite = {path = ".."}
tempfile = "3.2.0"

[[bin]]
name = "query"
path = "bin/query.rs"